<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
        android:background="@color/white">


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo_about"
        android:layout_marginBottom="25dp"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#CCCCCC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:text="@string/about_content"
            android:id="@+id/about_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_version_title"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/versionTxt"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



</LinearLayout>
</ScrollView>